# monitoring-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
grafana/provisioning/datasources/: vm.yml
promtail/: config.yml
src/: logging_config.py  main.py
victoriametrics/: scrape.yml
