[project]
name = "monitoring-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.12.5",
    "python-json-logger>=4.0.0",
    "uvicorn>=0.42.0",
    "watchfiles>=1.1.1",
]
